Tercera entrega lista

--- a/inicio/templates/inicio/inicio.html
+++ b/inicio/templates/inicio/inicio.html
@@ -5,11 +5,11 @@
 {% endblock title_head %}
 
 {% block h1_header %}
-Bienvenidos a mi pagina
+Bienvenidos a FitLab
 {% endblock h1_header %}
 
 {% block contenido %}
-Esta es la pagina desarrolada para mi tercera entrega
+<h2>En esta pagina podrás agregar los datos de tus atletas, entrenadores y futuras competencias</h2> 
 {% endblock contenido %}
 
 
