--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href={% url 'inicio:inicio' %}>Inicio</a>
-                <a class="navbar-brand" href={% url 'inicio:crear_atleta' %}>Crear Atleta</a>
+                <a class="navbar-brand" href={% url 'inicio:listar_atletas' %}>Atletas</a>
                 <a class="navbar-brand" href={% url 'inicio:crear_entrenador' %}>Crear Entrenador</a>
                 <a class="navbar-brand" href={% url 'inicio:crear_competencia' %}>Crear Competencia</a>
                 {% comment %} <a class="btn btn-primary" href={% url 'inicio:crear_competencia' %}>Crear Competencia</a> {% endcomment %}
