--- a/inicio/templates/inicio/crear_atleta.html
+++ b/inicio/templates/inicio/crear_atleta.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title_head %}
-<title>Nuevo Atleta</title> 
+<title>Atletas</title> 
 {% endblock title_head %}
 
 {% block h1_header %}
