--- a/inicio/templates/inicio/eliminar_atleta.html
+++ b/inicio/templates/inicio/eliminar_atleta.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
 
 {% block title_head %}
-<title>Atletas</title> 
+<title>Eliminar Atleta</title> 
 {% endblock title_head %}
 
 {% block h1_header %}
-Crear Atleta
+Eliminar Atleta {{atleta.nombre}}
 {% endblock h1_header %}
 
 {% block contenido %}
 
 <p>{{mensaje}}</p>
-<form action={% url 'inicio:detalle_atleta'%} method= "post">
+<form action={% url 'inicio:eliminar_atleta' atleta.id%} method= "post">
     {% csrf_token %}
-<table>{{formulario}} </table> 
-<button>Crear</button>
+<p>Va a eliminar a {{atleta}}</p>
+<button>Confirmar</button>
 </form>
 {% endblock contenido %}
