--- a/inicio/templates/inicio/modificar_atleta.html
+++ b/inicio/templates/inicio/modificar_atleta.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
 
 {% block title_head %}
-<title>Atletas</title> 
+<title>Modificar Atletas</title> 
 {% endblock title_head %}
 
 {% block h1_header %}
-Crear Atleta
+Modificar Atleta {{atleta.nombre}}
 {% endblock h1_header %}
 
 {% block contenido %}
 
 <p>{{mensaje}}</p>
-<form action={% url 'inicio:detalle_atleta'%} method= "post">
+<form action={% url 'inicio:modificar_atleta' atleta.id%} method= "post">
     {% csrf_token %}
-<table>{{formulario}} </table> 
-<button>Crear</button>
+<table>{{form}} </table> 
+<button>Modificar</button>
 </form>
 {% endblock contenido %}
