--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,12 @@
                 <a class="navbar-brand" href={% url 'inicio:listar_atletas' %}>Atletas</a>
                 <a class="navbar-brand" href={% url 'inicio:crear_entrenador' %}>Crear Entrenador</a>
                 <a class="navbar-brand" href={% url 'inicio:crear_competencia' %}>Crear Competencia</a>
+                {% if request.user.is_authenticated %}
+                <a class="navbar-brand" href= '#'>{{request.user.username}}</a>
+                <a class="btn btn-secondary" href= {% url 'usuario:logout' %}>Logout</a>
+                {% else %}
+                <a class="btn btn-primary" href= {% url 'usuario:login' %}>Login</a>
+                {% endif %}
                 {% comment %} <a class="btn btn-primary" href={% url 'inicio:crear_competencia' %}>Crear Competencia</a> {% endcomment %}
             </div>
         </nav>
