--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                 <a class="navbar-brand" href={% url 'inicio:crear_entrenador' %}>Crear Entrenador</a>
                 <a class="navbar-brand" href={% url 'inicio:crear_competencia' %}>Crear Competencia</a>
                 {% if request.user.is_authenticated %}
-                <a class="navbar-brand" href= '#'>{{request.user.username}}</a>
+                <a class="navbar-brand" href= {% url 'usuario:editar_pefil' %}>{{request.user.username}}</a>
                 <a class="btn btn-secondary" href= {% url 'usuario:logout' %}>Logout</a>
                 {% else %}
                 <a class="btn btn-primary" href= {% url 'usuario:login' %}>Login</a>
