--- a/inicio/templates/inicio/CBV/crear_atleta_CBV.html
+++ b/inicio/templates/inicio/CBV/crear_atleta_CBV.html
@@ -10,10 +10,12 @@ Crear Atleta
 
 {% block contenido %}
 
-<p>{{mensaje}}</p>
 <form action={% url 'inicio:crear_atleta'%} method= "post">
     {% csrf_token %}
-<table>{{formulario}} </table> 
+<table>
+    {{form}}
+    {{form.media}}
+</table> 
 <button>Crear</button>
 </form>
 {% endblock contenido %}
