--- a/inicio/templates/inicio/detalle_atleta.html
+++ b/inicio/templates/inicio/detalle_atleta.html
@@ -11,4 +11,5 @@ Datos del atleta {{atleta.nombre}}
 {% block contenido %}
 <li>Edad: {{atleta.edad}} </li>
 <li>Deporte: {{atleta.deporte}} </li>
+<li>Descripcion: {{atleta.descripcion | safe}} </li>
 {% endblock contenido %}
