--- a/inicio/templates/inicio/modificar_atleta.html
+++ b/inicio/templates/inicio/modificar_atleta.html
@@ -13,7 +13,10 @@ Modificar Atleta {{atleta.nombre}}
 <p>{{mensaje}}</p>
 <form action={% url 'inicio:modificar_atleta' atleta.id%} method= "post">
     {% csrf_token %}
-<table>{{form}} </table> 
+<table>
+    {{form}}
+    {{form.media}}
+</table> 
 <button>Modificar</button>
 </form>
 {% endblock contenido %}
