--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
                 <a class="navbar-brand" href={% url 'inicio:crear_entrenador' %}>Crear Entrenador</a>
                 <a class="navbar-brand" href={% url 'inicio:crear_competencia' %}>Crear Competencia</a>
                 {% if request.user.is_authenticated %}
+                {% if request.user.infoextra.avatar %}
+                <img src={{request.user.infoextra.avatar.url}} alt="" height='40px'>
+                {% endif %}
                 <a class="navbar-brand" href= {% url 'usuario:editar_pefil' %}>{{request.user.username}}</a>
                 <a class="btn btn-secondary" href= {% url 'usuario:logout' %}>Logout</a>
                 {% else %}
@@ -60,7 +63,7 @@
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
                         <ul class="list-inline mb-2">
-                            <li class="list-inline-item"><a href="#!">About</a></li>
+                            <li class="list-inline-item"><a href={% url 'inicio:about_us' %}>About</a></li>
                         </ul>
                         <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2023. All Rights Reserved.</p>
                     </div>
