--- a/inicio/templates/inicio/modificar_atleta.html
+++ b/inicio/templates/inicio/modificar_atleta.html
@@ -11,12 +11,9 @@ Modificar Atleta {{atleta.nombre}}
 {% block contenido %}
 
 <p>{{mensaje}}</p>
-<form action={% url 'inicio:modificar_atleta' atleta.id%} method= "post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-<table>
-    {{form}}
-    {{form.media}}
-</table> 
-<button>Modificar</button>
+    {{ form.as_p }}
+    <button type="submit">Guardar cambios</button>
 </form>
 {% endblock contenido %}
